Converted back to using HttpURLConnection after testing showed HttpClient was considerably slower, now supporting Java 8 and above again.