@@ -3,12 +3,8 @@ package me.joshmcfarlin.cryptocompareapi.utils;
 import me.joshmcfarlin.cryptocompareapi.Exceptions.OutOfCallsException;
 
 import java.io.*;
-import java.net.URI;
-import java.time.Duration;
-
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.net.HttpURLConnection;
+import java.net.URL;
 
 /**
  * Contains methods for creating JSON GET requests
@@ -20,18 +16,16 @@ public class Connection {
      * @param urlString The URL to get JSON information from
      * @return Reader containing Json information
      * @throws IOException when a connection cannot be made
-     * @throws InterruptedException when the connection is interrupted
      */
-    static Reader getJSON(String urlString) throws IOException, InterruptedException {
-        URI url = URI.create(urlString);
+    static Reader getJSON(String urlString) throws IOException {
+        URL url = new URL(urlString);
 
-        HttpRequest httpRequest = HttpRequest.newBuilder()
-                .uri(url).GET()
-                .timeout(Duration.ofSeconds(10))
-                .build();
+        HttpURLConnection response = (HttpURLConnection) url.openConnection();
+        response.setDoOutput(true);
+        response.setRequestMethod("GET");
+        response.connect();
 
-        HttpResponse response = HttpClient.newBuilder().build().send(httpRequest, HttpResponse.BodyHandlers.ofInputStream());
-        return new InputStreamReader((InputStream) response.body());
+        return new InputStreamReader(new BufferedInputStream(response.getInputStream()));
     }
 
     /**
@@ -40,20 +34,11 @@ public class Connection {
      * @param type The type of API call being made
      * @return Reader containing Json information
      * @throws IOException when a connection cannot be made
-     * @throws InterruptedException when the connection is interrupted
      * @throws OutOfCallsException when no more API calls are available
      */
-    public static Reader getJSON(String urlString, CallTypes type) throws IOException, OutOfCallsException, InterruptedException {
-        URI url = URI.create(urlString);
-
+    public static Reader getJSON(String urlString, CallTypes type) throws IOException, OutOfCallsException {
         if (RateLimiting.callable(type)) {
-            HttpRequest httpRequest = HttpRequest.newBuilder()
-                    .uri(url).GET()
-                    .timeout(Duration.ofSeconds(10))
-                    .build();
-
-            HttpResponse response = HttpClient.newBuilder().build().send(httpRequest, HttpResponse.BodyHandlers.ofInputStream());
-            return new InputStreamReader((InputStream) response.body());
+            return getJSON(urlString);
         } else {
             throw new OutOfCallsException(String.format("No more %s calls are left, please try later.", type));
         }
